--- a/BeamWallet/ViewControllers/Main/Wallet/Transaction/Cell/GeneralTransactionInfoCell.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/Transaction/Cell/GeneralTransactionInfoCell.xib
@@ -39,7 +39,7 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="1Cs4wu6pu5qCZ35bSLNVzGyEx5N6uzbg9t" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pap-u5-udU">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="1Cs4wu6pu5qCZ35bSLNVzGyEx5N6uzbg9t" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pap-u5-udU" customClass="BMCopyLabel" customModule="BeamWallet" customModuleProvider="target">
                                 <rect key="frame" x="150" y="0.0" width="140" height="33.5"/>
                                 <fontDescription key="fontDescription" name="SFProDisplay-Regular" family="SF Pro Display" pointSize="14"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
